Prevent logo flickering (#538)
* UI: fix layout shifts after loading the logo

After loading the logo the nav bar elements to move because the
browser only knows the actual size of the logo after loading it.

* UI: cache logo for a month to prevent flickering when reloading

If we update the logo and want to make sure the new logo is
delivered even if the old one is cached, we can use cache busting but
it's not a problem for now.

--- a/frontend/src/components/NavBar/index.module.scss
+++ b/frontend/src/components/NavBar/index.module.scss
@@ -51,8 +51,8 @@
 }
 
 .logoImg {
-  max-height: 46px;
-  max-width: 160px;
+  height: 46px;
+  width: 160px;
   display: block;
 }
 
